# webshot

./: .envrc  .gitignore  10-webshot.conf  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  deno.json  flake.nix  main.ts  renovate.json  shell.nix  tsconfig.json
.github/workflows/: baseline.yml  prv.yml
e2e/: main.test.ts
src/: auth.rs  browser.rs  lib.rs  main.rs  v1.rs
tests/: main.rs
