[package]
name = "webshot"
version = "0.1.0"
edition = "2021"

[dependencies]
dropshot = "0.17"
chromiumoxide = "0.9.1"
biscuit-auth = "6.0.0"
serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
futures = "0.3.32"
base64 = "0.22.1"
http = "1.4.0"
schemars = "0.8.22"
hex = "0.4.3"
chromiumoxide_cdp = "0.9.1"
tokio = { version = "1.52.0", features = ["full"] }
tracing-journald = "0.3.2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
